--- a/distributed-ui/src/main/res/values/strings.xml
+++ b/distributed-ui/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DistributedUiTest</string>
+    <string name="app_name">DistributedUi</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_satellite">SatelliteActivity</string>
     <string name="local_service_started">Star network active</string>
